# medgraph-navigator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: API.md  INSTALLATION.md  USAGE.md
notebooks/: demo.ipynb
src/backend/: graph_navigator.py  medical_analyzer.py
src/frontend/: MedGraphViz.jsx
src/utils/: data_generation.py  gpu_utils.py
tests/: test_graph_navigator.py  test_medical_analyzer.py
