[metadata]
name = medgraph-navigator
version = 0.1.0
author = BBMW96
author_email = bbmw0@hotmail.com
description = A GraphRAG-powered medical analysis system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BBMW96/medgraph-navigator
project_urls =
    Bug Tracker = https://github.com/BBMW96/medgraph-navigator/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
